--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,6 +22,7 @@ artifacts:
   name: nugetPackages
 
 deploy:
+- provider: NuGet
   api_key:
     secure: 7nX5a7V6wWbtPSJ6bQSU9BRZwJEdn70w0Ydlf5fuk44Gjk9BVgxnYK6u8MNzT2yA
   skip_symbols: true
